@@ -1,3 +1,7 @@
+2004-06-03  Arjan Molenaar  <arjanmolenaar@hetnet.nl>
+
+	* gaphor/ui/namespace.py: Added DND for elements within the tree view.
+
 2004-06-01  Arjan Molenaar  <arjanmolenaar@hetnet.nl>
 
 	* gaphor/diagram/association.py: added hollow diamond end for shared
